--- a/Shell Wallet/Shell Wallet.csproj
+++ b/Shell Wallet/Shell Wallet.csproj
@@ -121,6 +121,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RemoteReminder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RemoteReminder.Designer.cs">
+      <DependentUpon>RemoteReminder.cs</DependentUpon>
+    </Compile>
     <Compile Include="Server Wrapper\Mobile.cs" />
     <Compile Include="Server Wrapper\Network.cs" />
     <Compile Include="Server Wrapper\Utilities.cs" />
@@ -168,6 +174,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="RemoteReminder.resx">
+      <DependentUpon>RemoteReminder.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="TransactionInfo.resx">
       <DependentUpon>TransactionInfo.cs</DependentUpon>
     </EmbeddedResource>
