Added a config loading fix thanks to a suggestion from R0BC0D3R

--- a/Shell Wallet/Shell Wallet.csproj
+++ b/Shell Wallet/Shell Wallet.csproj
@@ -52,6 +52,15 @@
   <PropertyGroup>
     <ApplicationIcon>407289344613810218_6cI_icon.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <TargetZone>LocalIntranet</TargetZone>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GenerateManifests>false</GenerateManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -181,6 +190,7 @@
       <DependentUpon>TransactionInfo.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <None Include="Properties\app.manifest" />
     <None Include="Properties\DataSources\Contact.datasource" />
     <None Include="Properties\DataSources\RPCWrapper.Transaction.datasource" />
     <None Include="Properties\DataSources\RPCWrapper.Transfer.datasource" />
